# Fast-Api

Project-1/: pyproject.toml
Project-1/fast/: main.py
Project-1/tests/: test_main.py
admission_form/: pyproject.toml
admission_form/admission_form/: main.py
blogging_site/: pyproject.toml
blogging_site/blogging_site/: main.py
blogging_site/static/: styles.css
blogging_site/templates/: 404.html  base.html  create_post.html  home.html  post_detail.html
project-2/: pyproject.toml
project-2/project/: main.py
project-2/tests/: test_main.py
