[tool.poetry]
name = "project-2"
version = "0.1.0"
description = ""
authors = ["adilmaqsood1 <126709358+adilmaqsood1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pytest = "^8.3.2"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
